# eml

./: CLAUDE.md  README.md  example.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: STORAGE_V2_SPEC.md
emails/: __init__.py  cli.py
examples/: migrate.yml  pull.yml  push.yml
src/emails/: cli.py  imap.py
src/eml/: __init__.py  cli.py  config.py  imap.py  index.py  migrate.py  parquet.py  parsing.py  pulls.py  storage.py  uids.py  web.py
src/eml/cli/: __init__.py  account.py  attachments.py  backfill_threads.py  index_cmds.py  migrate_db.py  misc.py  parquet_cmds.py  pull.py  push.py  status.py  utils.py
src/eml/layouts/: __init__.py  base.py  path_template.py  sqlite.py  tree.py
tests/: test_cli.py  test_path_template.py
ui/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
ui/src/: App.tsx  main.tsx  theme.tsx  types.ts
ui/src/components/: Dashboard.tsx  EmailBrowser.scss  EmailBrowser.tsx  EmailViewer.scss  EmailViewer.tsx  FolderDetail.scss  FolderDetail.tsx  FolderNav.scss  FolderNav.tsx  FolderStats.tsx  Histogram.scss  Histogram.tsx  NotFound.scss  NotFound.tsx  RecentActivity.scss  RecentActivity.tsx  Search.scss  Search.tsx  SyncRunDetail.scss  SyncRunDetail.tsx  SyncRunsList.scss  SyncRunsList.tsx  SyncRunsPage.scss  SyncRunsPage.tsx  SyncStatusBar.scss  SyncStatusBar.tsx  ThemeToggle.scss  ThemeToggle.tsx  ThreadViewer.scss  ThreadViewer.tsx  UIDSummary.scss  UIDSummary.tsx
ui/src/hooks/: useApi.ts
ui/src/styles/: main.scss  variables.scss
www/: app.py
www/templates/: base.html  index.html  message.html
