[project]
name = "eml"
version = "0.1.0"
description = "Migrate emails between IMAP mailboxes with flexible filtering"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
keywords = ["email", "imap", "migration", "gmail", "zoho"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
]
dependencies = [
    "click>=8.0",
    "flask>=3.1.2",
    "humanize>=4.14.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=14.2.0",
]

[project.scripts]
eml = "eml.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eml"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
